--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -26,13 +26,14 @@ footer * {
 .link-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-bottom: 4.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .link-container-inner {
   display: flex;
   justify-content: flex-start;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 :is(.link-container-inner nav) {
@@ -81,6 +82,7 @@ footer * {
 
   .link-container {
     display: block;
+    margin-bottom: 0;
   }
 
   :is(.link-container-inner nav) {
