--- a/layouts/components/homepage/persona_info.html
+++ b/layouts/components/homepage/persona_info.html
@@ -27,29 +27,43 @@
               </p>
             </div>
             <div class="data-scientist-rest">
-              <p class="text-large">
-                📖 &nbsp;Bioconductor Books:
+              <div class="data-scientist-rest-row">
+              <p>📖</p><p class="text-large">
+                Bioconductor Books:
                 <a class="format-underline" href="/books/release/csawBook">csawBook</a>,
                 <a class="format-underline" href="/books/release/OSCA">OSCA</a>
                 and
                 <a class="format-underline" href="/books/release/SingleRBook">SingleRBook</a>
               </p>
-              <p class="text-large">
-                📣 &nbsp;<a class="format-underline" href="/news/bioc_<%= config[:release_version].sub(" .", "_" )
-                  %>_release/">Latest release announcement</a>
-              </p>
-              <p class="text-large">
-                🛠️&nbsp;
-                <a class="format-underline" href="https://anvilproject.org">Use Bioconductor in the AnVIL</a>.
-                See our
-                <a class="format-underline" href="https://anvil.bioconductor.org">project updates</a>
-              </p>
-              <p class="text-large">
-                💬 &nbsp;<a class="format-underline" href="https://slack.bioconductor.org/">Community Slack sign-up</a>
-              </p>
-              <p class="text-large">💡 &nbsp;<a class="format-underline" href="/help/support/">Support site</a></p>
-              <p class="text-large">🗓️ &nbsp;<a class="format-underline"
-                  href="http://bioconductor.org/help/events/">Events calendar</a></p>
+              </div>
+              <div class="data-scientist-rest-row">
+                <p>📣</p>
+                <p class="text-large">
+                  <a class="format-underline" href="/news/bioc_<%= config[:release_version].sub(" .", "_" )
+                    %>_release/">Latest release announcement</a>
+                </p>
+              </div>
+              <div class="data-scientist-rest-row">
+                <p>🛠️</p>
+                <p class="text-large">
+                  <a class="format-underline" href="https://anvilproject.org">Use Bioconductor in the AnVIL</a>.
+                  See our
+                  <a class="format-underline" href="https://anvil.bioconductor.org">project updates</a>
+                </p>
+              </div>
+              <div class="data-scientist-rest-row">
+                <p>💬</p>
+                <p class="text-large">
+                  <a class="format-underline" href="https://slack.bioconductor.org/">Community Slack sign-up</a>
+                </p>
+              </div>
+              <div class="data-scientist-rest-row">
+                <p>💡</p><p class="text-large"><a class="format-underline" href="/help/support/">Support site</a></p>
+              </div>
+              <div class="data-scientist-rest-row">
+                <p>🗓️</p><p class="text-large"><a class="format-underline"
+                    href="http://bioconductor.org/help/events/">Events calendar</a></p>
+              </div>
             </div>
             <div class="warmcool-gradient-border">
               <div class="user-quote">
