--- a/layouts/components/index_hero.html
+++ b/layouts/components/index_hero.html
@@ -1,10 +1,12 @@
 <div class="homepage-container">
   <h1 class="text-hero format-bold">
-    Open source software for <br><mark>Bioinformatics</mark>
+    Open source <br class="mobile-break" />software for <br /><mark
+      >Bioinformatics</mark
+    >
   </h1>
   <p class="text-large">
     The Bioconductor project aims to develop and share open source software for
-    precise and repeatable analysis of biological data.<br>
+    precise and repeatable analysis of biological data.<br />
     We foster an inclusive and collaborative community of developers and data
     scientists.
   </p>
