--- a/assets/style/learn.css
+++ b/assets/style/learn.css
@@ -9,11 +9,8 @@
     var(--gradient-brand) border-box;
 }
 
-.learn-container > div {
-  display: flex;
-}
-
 .learn-content-upper {
+  display: flex;
   padding: 0;
   gap: 56px;
 }
@@ -46,20 +43,100 @@
   flex: 1 0 0;
 }
 
-.learn-links > section {
+.publications-releases-faq {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.learn-links > section,
+.publications-releases-faq > section {
   width: 100%;
 }
 
-.learn-links > section > ul {
+.learn-links > section > ul,
+.publications-releases-faq > section > ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.learn-links > section li {
-  border-radius: 8px;
+.learn-links > section li,
+.publications-releases-faq > section li {
   border: 1px solid;
   border-color: var(--primary-p75);
   padding: 1rem;
   margin-bottom: 0;
+  border-radius: 0.5rem;
+  align-items: center;
+  color: inherit;
+  display: flex;
+  justify-content: space-between;
+  transition: background 0.5s ease;
+}
+
+.learn-links > section li *,
+.publications-releases-faq > section li * {
+  margin-bottom: 0;
+}
+
+.learn-links > section li svg path,
+.publications-releases-faq > section li svg path {
+  /* transition: stroke 0.5s ease; */
+  transform: translateX(0);
+  transition: transform 0.2s ease;
+}
+
+.publications-footer {
+  border-left: 3px solid var(--primary-p-300, #3792ad);
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+}
+
+.prev-releases-footer a {
+  border-left: 3px solid var(--primary-p-300, #3792ad);
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+  display: block;
+}
+
+.learn-chip {
+  background: var(--gradient-purpleblue);
+
+  padding: 0.75rem 1rem;
+  border-radius: 4rem;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.learn-chip * {
+  color: white;
+  margin: 0;
+}
+
+.learn-chevron {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.learn-question-mark {
+  vertical-align: middle;
+}
+
+.learn-links > section li:hover,
+.publications-releases-faq > section li:hover {
+  background-image: var(--gradient-brand);
+}
+
+.learn-links > section li:hover *,
+.publications-releases-faq > section li:hover * {
+  color: #fff;
+}
+
+.learn-links > section li:hover svg path,
+.publications-releases-faq > section li:hover svg path {
+  stroke: #fff;
+  transform: translateX(3px);
 }
