--- a/assets/style/learn.css
+++ b/assets/style/learn.css
@@ -1,5 +1,4 @@
 .learn-container {
-  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 32px;
@@ -139,4 +138,15 @@
 .publications-releases-faq > section li:hover svg path {
   stroke: #fff;
   transform: translateX(3px);
+}
+
+@media (width <= 768px) {
+  .learn-content-upper,
+  .publications-releases-faq {
+    flex-direction: column;
+  }
+
+  .learn-intro {
+    width: 100%;
+  }
 }
