--- a/assets/style/bioconductor.css
+++ b/assets/style/bioconductor.css
@@ -41,9 +41,8 @@ nav.subnav {
 nav.subnav a {
   text-decoration: underline;
   display: block;
-  padding: 0.5rem;
-  padding-bottom: 0.75rem;
-  background-image: url("/images/chevron_right.svg");
+  padding: 0.75rem 2rem 0.75rem 0.75rem;
+  background-image: url("/images/icons/svgs/chevron-right-n400.svg");
   background-repeat: no-repeat;
   background-position: right center;
   color: black;
@@ -58,13 +57,8 @@ img {
     display: block;
   }
 
-  /* .left-col {
+  .left-col {
     display: none;
-  } */
-
-  .left-col > .site-container {
-    margin: 0 auto; /* floats the design center */
-    max-width: 1400px; /* change the site design width here */
   }
 }
 
