--- a/layouts/components/homepage/persona_info.html
+++ b/layouts/components/homepage/persona_info.html
@@ -184,3 +184,14 @@
     </div>
   </section>
 </div>
+
+<a class="mobile-text-block container">
+    <div class="data-dev-logo">
+      <img src="images/icons/svgs/question-mark-circle.svg" alt="question mark circle" width="28" height="28" />
+      <p>Need some help? Ask our <br>community on the Bioconductor Support site!</p>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+      <path d="M9 5.90002L16 12.9L9 19.9" stroke="white" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round" />
+    </svg>
+  </a>
