--- a/assets/style/learn.css
+++ b/assets/style/learn.css
@@ -15,7 +15,7 @@
 }
 
 .learn-content-lower {
-  padding: 8px 0px 24px 0px;
+  padding: 8px 0 24px;
 }
 
 .learn-container hr {
@@ -35,7 +35,7 @@
 }
 
 .learn-links {
-  padding: 8px 0px 24px 0px;
+  padding: 8px 0 24px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -46,6 +46,11 @@
   display: flex;
   justify-content: space-between;
   gap: 1rem;
+}
+
+.learn-chip * {
+  color: white;
+  margin: 0;
 }
 
 .learn-links > section,
@@ -101,18 +106,12 @@
 
 .learn-chip {
   background: var(--gradient-purpleblue);
-
   padding: 0.75rem 1rem;
   border-radius: 4rem;
   text-decoration: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.learn-chip * {
-  color: white;
-  margin: 0;
 }
 
 .learn-chevron {
@@ -156,15 +155,11 @@
   .learn-content-upper,
   .publications-releases-faq {
     flex-direction: column;
+    gap: 0;
   }
 
   .learn-intro {
     width: 100%;
-  }
-
-  .learn-content-upper,
-  .publications-releases-faq {
-    gap: 0;
   }
 
   .learn-chip {
