style lint ignore

--- a/assets/style/about.css
+++ b/assets/style/about.css
@@ -20,8 +20,10 @@
   padding-bottom: 0.62rem;
 }
 
+/* stylelint-disable */
 .about-join .text-gradient {
   background: var(--misc-pink);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+/* stylelint-enable */
