--- a/assets/style/learn_and_dev.css
+++ b/assets/style/learn_and_dev.css
@@ -1,4 +1,4 @@
-.learn-container {
+.page-container {
   display: flex;
   flex-direction: column;
   padding: 32px;
@@ -8,17 +8,17 @@
     var(--gradient-brand) border-box;
 }
 
-.learn-content-upper {
+.upper-container {
   display: flex;
   padding: 0;
   gap: 56px;
 }
 
-.learn-content-lower {
+.lower-container {
   padding: 8px 0 24px;
 }
 
-.learn-container hr {
+.page-container hr {
   position: static;
   width: 100%;
   height: 1px;
@@ -26,16 +26,16 @@
   border: none;
 }
 
-.learn-container li::before {
+.page-container li::before {
   all: unset;
 }
 
-.learn-intro {
+.page-intro {
   width: 24.188rem;
   height: 100%;
 }
 
-.learn-links {
+.upper-content {
   padding: 8px 0 24px;
   display: flex;
   flex-direction: column;
@@ -43,31 +43,31 @@
   flex: 1 0 0;
 }
 
-.publications-releases-faq {
+.lower-content {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
 }
 
-.learn-chip * {
+.bottom-chip * {
   color: white;
   margin: 0;
 }
 
-.learn-links > section,
-.publications-releases-faq > section {
+.upper-content > section,
+.lower-content > section {
   width: 100%;
 }
 
-.learn-links > section > ul,
-.publications-releases-faq > section > ul {
+.upper-content > section > ul,
+.lower-content > section > ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.learn-links > section li,
-.publications-releases-faq > section li {
+.upper-content > section li,
+.lower-content > section li {
   border: 1px solid;
   border-color: var(--primary-p75);
   padding: 1rem;
@@ -77,16 +77,19 @@
   color: inherit;
   display: flex;
   justify-content: space-between;
-  transition: background 0.5s ease;
+  transition: background 0.2s;
+  background-image: url("/images/icons/svgs/arrow-circle-right-blue.svg");
+  background-repeat: no-repeat;
+  background-position: 98.5% 50%;
 }
 
-.learn-links > section li *,
-.publications-releases-faq > section li * {
+.upper-content > section li *,
+.lower-content > section li * {
   margin-bottom: 0;
 }
 
-.learn-links > section li svg path,
-.publications-releases-faq > section li svg path {
+.upper-content > section li svg path,
+.lower-content > section li svg path {
   /* transition: stroke 0.5s ease; */
   transform: translateX(0);
   transition: transform 0.2s ease;
@@ -105,7 +108,7 @@
   display: block;
 }
 
-.learn-chip {
+.bottom-chip {
   background: var(--gradient-purpleblue);
   padding: 0.75rem 1rem;
   border-radius: 4rem;
@@ -124,46 +127,49 @@
   vertical-align: middle;
 }
 
-.learn-links > section li:hover,
-.publications-releases-faq > section li:hover {
-  background-image: var(--gradient-brand);
+.upper-content > section li:hover,
+.lower-content > section li:hover {
+  background-image: url("/images/icons/svgs/arrow-circle-right-white.svg"),
+    var(--gradient-brand);
+  background-repeat: no-repeat, no-repeat;
+  background-position: 99% 50%, 0 0;
 }
 
-.learn-links > section li:hover *,
-.publications-releases-faq > section li:hover * {
+.upper-content > section li:hover *,
+.lower-content > section li:hover * {
   color: #fff;
 }
 
-.learn-links > section li:hover svg path,
-.publications-releases-faq > section li:hover svg path {
+.upper-content > section li:hover svg path,
+.lower-content > section li:hover svg path {
   stroke: #fff;
   transform: translateX(3px);
 }
 
 @media (width <= 768px) {
-  .learn-container {
+  .page-container {
     padding: 1rem;
   }
 
-  .learn-container * {
+  .page-container * {
     font-size: 1rem;
   }
 
-  .learn-container * a {
+  .page-container * a {
     max-width: 16rem;
   }
 
-  .learn-content-upper,
-  .publications-releases-faq {
+  .upper-container,
+  .lower-content {
     flex-direction: column;
     gap: 0;
   }
 
-  .learn-intro {
+  .page-intro {
     width: 100%;
   }
 
-  .learn-chip {
+  .bottom-chip {
     border-radius: 4px;
   }
 
