--- a/assets/style/learn_and_dev.css
+++ b/assets/style/learn_and_dev.css
@@ -51,7 +51,17 @@
 
 .bottom-chip * {
   color: white;
-  margin: 0;
+}
+
+.bottom-chip-logo a {
+  text-align: center;
+  margin-bottom: 2px;
+  padding-top: 0.25rem;
+}
+.bottom-chip-logo {
+  text-align: center;
+  margin-bottom: 0;
+  padding-top: 0.25rem;
 }
 
 .upper-content > section,
@@ -116,6 +126,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: auto;
 }
 
 .learn-chevron {
