--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -372,6 +372,8 @@
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   background-color: inherit;
   gap: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .news,
