--- a/layouts/components/homepage/events.html
+++ b/layouts/components/homepage/events.html
@@ -37,20 +37,6 @@
     </div>
     <div class="event-card-container">
       <div class="event-card">
-        <p class="format-bold">
-          EuroBioC2023: European Bioconductor Conference
-        </p>
-        <div class="event-date-location">
-          <span>
-            <time class="text-small" datetime="2023-08-02">02</time> -
-            <time class="text-small" datetime="2023-08-04">04 August 2023</time>
-          </span>
-          <p class="text-small">Ghent, Belgium</p>
-        </div>
-      </div>
-    </div>
-    <div class="event-card-container">
-      <div class="event-card">
         <p class="format-bold">RNA-seq analysis with Bioconductor</p>
         <div class="event-date-location">
           <span class="event-date-location">
@@ -94,7 +80,7 @@
         <p class="format-bold">Multi-omic data science with R/Bioconductor</p>
         <div class="event-date-location">
           <span>
-            <time class="text-small" datetime="2023-06-19">19 June</time> -
+            <time class="text-small" datetime="2023-06-19">19</time> -
             <time class="text-small" datetime="2023-06-21">21 June 2023</time>
           </span>
           <p class="text-small">Oulu, Finland</p>
@@ -108,7 +94,7 @@
         </p>
         <div class="event-date-location">
           <span>
-            <time class="text-small" datetime="2023-06-11">11 June</time> -
+            <time class="text-small" datetime="2023-06-11">11</time> -
             <time class="text-small" datetime="2023-06-16">16 June 2023</time>
           </span>
           <p class="text-small">Bressanone-Brixen, Italy</p>
@@ -122,10 +108,26 @@
         </p>
         <div class="event-date-location">
           <span>
-            <time class="text-small" datetime="2023-05-22">22 May</time> -
+            <time class="text-small" datetime="2023-05-22">22</time> -
             <time class="text-small" datetime="2023-05-26">26 May 2023</time>
           </span>
           <p class="text-small">Virtual</p>
+        </div>
+      </div>
+    </div>
+    <div class="event-card-container">
+      <div class="event-card">
+        <p class="format-bold">
+          GENE SET ENRICHMENT ANALYSIS IN R/BIOCONDUCTOR
+        </p>
+        <div class="event-date-location">
+          <span>
+            <time class="text-small" datetime="2023-01-30">30 January</time> -
+            <time class="text-small" datetime="2023-02-02"
+              >02 February 2023</time
+            >
+          </span>
+          <p class="text-small">virtual</p>
         </div>
       </div>
     </div>
