--- a/layouts/components/examples/sidebar.html
+++ b/layouts/components/examples/sidebar.html
@@ -1,5 +1,11 @@
 <div class="sidebar-nav">
-  <p class="format-bold">Jump to:</p>
+  <span class="sidebar-header">
+    <p class="format-bold">Jump to:</p>
+    <img
+      class="mobile-chevron"
+      src="/images/icons/chevron-down.jpg"
+      alt="collapse-chevron" />
+  </span>
   <nav class="internal-nav" aria-label="Page navigation">
     <a class="sidebar-nav-button selected-nav" href="#heading-text-1"
       >Heading text 1</a
