added links and labels

--- a/layouts/components/homepage/join.html
+++ b/layouts/components/homepage/join.html
@@ -5,6 +5,7 @@
       class="tabs-join-radio"
       name="tabs-join"
       id="join-tab1"
+      aria-label="First join tab"
       checked
     />
     <div class="join-row">
@@ -54,6 +55,7 @@
       class="tabs-join-radio"
       name="tabs-join"
       id="join-tab2"
+      aria-label="Second join tab"
     />
     <div class="join-row">
       <div class="join-content">
