--- a/layouts/components/homepage/join.html
+++ b/layouts/components/homepage/join.html
@@ -5,7 +5,7 @@
       class="tabs-join-radio"
       name="tabs-join"
       id="join-tab1"
-      aria-label="First join tab"
+      aria-label="View scientists join information"
       checked
     />
     <div class="join-row">
@@ -55,7 +55,7 @@
       class="tabs-join-radio"
       name="tabs-join"
       id="join-tab2"
-      aria-label="Second join tab"
+      aria-label="View developers join information"
     />
     <div class="join-row">
       <div class="join-content">
