finished the sidebar resizing methods

--- a/layouts/components/examples/sidebar.html
+++ b/layouts/components/examples/sidebar.html
@@ -10,8 +10,8 @@
 
     <nav class="internal-nav" aria-label="Page navigation">
       <a class="sidebar-nav-button selected-nav" href="#heading-text-1"
-        >Heading text 1</a
-      >
+        >Heading text 1
+      </a>
       <a class="sidebar-nav-button" href="#heading-text-2">Heading text 2</a>
       <a class="sidebar-nav-button" href="#heading-text-3">Heading text 3</a>
       <a class="sidebar-nav-button" href="#heading-text-4">Heading text 4</a>
