--- a/layouts/_bioc_devel_packages.html
+++ b/layouts/_bioc_devel_packages.html
@@ -3,33 +3,33 @@
     <p class="format-bold">Development Version</p>
     <p>Bioconductor packages under development:</p>
   </div>
-  <ul>
+  <nav>
     <% devel_repos = config[:devel_repos] %> <% if devel_repos.include? "bioc"
     %>
-    <li>
+    <div>
       Analysis
       <a class="symlink" href="/packages/devel/BiocViews.html#___Software"
         >software</a
       >
       packages.
-    </li>
+    </div>
     <% end %> <% if devel_repos.include? "data/annotation" %>
-    <li>
+    <div>
       <a class="symlink" href="/packages/devel/BiocViews.html#___AnnotationData"
         >Annotation</a
       >
       packages
-    </li>
+    </div>
     <% end %> <% if devel_repos.include? "data/experiment" %>
-    <li>
+    <div>
       Illustrative
       <a class="symlink" href="/packages/devel/BiocViews.html#___ExperimentData"
         >experiment data</a
       >
       packages
-    </li>
+    </div>
     <% end %>
-  </ul>
+  </nav>
   <p>Developer Resources:</p>
   <ul>
     <li><a href="/developers/gitlog">GIT Log</a></li>
