--- a/assets/style/sidebar.css
+++ b/assets/style/sidebar.css
@@ -179,7 +179,7 @@ nav.subnav a {
     display: block;
     position: fixed;
     height: 4.5rem;
-    width: calc(100% + 1.3rem);
+    width: calc(100% - 1.7rem);
     background-color: #fff;
   }
 
@@ -188,7 +188,8 @@ nav.subnav a {
     height: 1.7rem;
     overflow: hidden;
     transition: 0.3s;
-    margin-left: 4.5rem;
+    margin-right: auto;
+    margin-left: 1.375rem;
     border: 1.5px solid #0000;
     border-radius: 8px;
     width: calc(100vw - 5rem);
