finished editing content

--- a/layouts/_bioc_older_packages.html
+++ b/layouts/_bioc_older_packages.html
@@ -4,7 +4,7 @@
       <a href="/about/release-announcements/">Previous Releases</a>
     </p>
     <p>
-      <em>Bioconductor</em> (<em>R</em>)
+      Bioconductor (R)
       <a href="/about/release-announcements/#release-versions">versions</a>:
     </p>
   </div>
