--- a/assets/style/sidebar.css
+++ b/assets/style/sidebar.css
@@ -36,6 +36,7 @@ nav.subnav a {
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  margin-left: 1rem;
 }
 
 .sidebar-nav-container {
