fixes for about page

--- a/assets/style/bioconductor.css
+++ b/assets/style/bioconductor.css
@@ -16,7 +16,7 @@ main > .container.main-subnav {
   gap: 2rem;
   grid-template-columns: 300px 1fr;
   grid-template-areas: "left-col .";
-  margin: 2rem 0;
+  margin-top: 2rem;
 }
 
 img {
