--- a/assets/style/sidebar.css
+++ b/assets/style/sidebar.css
@@ -11,7 +11,7 @@
 .mobile-chevron {
   display: none;
 }
-
+/* 
 nav.subnav {
   border-radius: 0.5rem;
   border: 1px solid var(--primary-p75);
@@ -26,7 +26,7 @@ nav.subnav a {
   background-repeat: no-repeat;
   background-position: right center;
   color: black;
-}
+} */
 
 .left-col-inner {
   position: sticky;
@@ -150,9 +150,6 @@ nav.subnav a {
 }
 
 @media (width <=768px) {
-  .left-col {
-    margin-top: 4rem;
-  }
 
   .left-col-inner {
     margin-left: 0;
