--- a/layouts/_bioc_older_packages.html
+++ b/layouts/_bioc_older_packages.html
@@ -8,7 +8,7 @@
       <a href="/about/release-announcements/#release-versions">versions</a>:
     </p>
   </div>
-  <nav class="indivne_divst">
+  <nav >
     <div>
       <a href="/packages/3.16/BiocViews.html#___Software">3.16&nbsp;(4.2)</a>
     </div>
