--- a/assets/style/sidebar.css
+++ b/assets/style/sidebar.css
@@ -164,7 +164,7 @@
     display: block;
     position: fixed;
     height: 4.5rem;
-    width: calc(100% - 1.7rem);
+    width: 98%;
     background-color: #fff;
   }
 
@@ -174,7 +174,7 @@
     overflow: hidden;
     transition: 0.3s;
     margin-right: auto;
-    margin-left: 1.375rem;
+    margin-left: auto;
     border: 1.5px solid #0000;
     border-radius: 8px;
     width: calc(100vw - 5rem);
