--- a/assets/style/bioconductor.css
+++ b/assets/style/bioconductor.css
@@ -11,12 +11,15 @@ body {
   max-width: 1400px;
 }
 
+main > .container {
+  margin-top: 2rem;
+}
+
 main > .container.main-subnav {
   display: grid;
   gap: 2rem;
   grid-template-columns: 300px 1fr;
   grid-template-areas: "left-col .";
-  margin-top: 2rem;
 }
 
 img {
