--- a/layouts/components/packages/badges.html
+++ b/layouts/components/packages/badges.html
@@ -1,3 +1,4 @@
+<div class="sidebar-box">
 <% if current? @item %>
 <section class="badges">
   <%# Shield 1. Availability %> <% if ['data/annotation/', 'data/experiment/' ,
@@ -128,3 +129,4 @@
     10.18129/B9.bioc.<%=@item[:Package]%>
   </a>
 </p>
+</div>
