--- a/layouts/components/packages/badges.html
+++ b/layouts/components/packages/badges.html
@@ -1,4 +1,4 @@
-<div class="sidebar-box">
+<div class="sidebar-box" id="badges-box">
 <% if current? @item %>
 <section class="badges">
   <%# Shield 1. Availability %> 
