--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -14,3 +14,7 @@
   src: url("fonts/AtkinsonHyperlegible-Bold.ttf") format("truetype");
   font-weight: bold;
 }
+
+* {
+  font-family: "Atkinson Hyperlegible", sans-serif;
+}
