Moved blocks to sections, and updated the styling readme

--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -46,11 +46,11 @@
   <link rel="stylesheet" type="text/css" href="/style/components/buttons.css" media="screen" />
 
   <!-- Block styling -->
-  <link rel="stylesheet" type="text/css" href="/style/blocks/announcement.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/style/blocks/hero.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/style/blocks/header.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/style/blocks/sidebar.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/style/blocks/footer.css" media="screen"/>
+  <link rel="stylesheet" type="text/css" href="/style/sections/announcement.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/sections/hero.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/sections/header.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/sections/sidebar.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/sections/footer.css" media="screen"/>
     
   <!-- Page styling -->
   <link rel="stylesheet" type="text/css" href="/style/pages/home.css" media="screen" />
