Renamed bioconductor.css to layout.css

--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet" type="text/css" href="/style/base/fonts.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/base/colors.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/base/typography.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/style/base/bioconductor.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/base/layout.css" media="screen" />
     
   <!-- Component styling -->
   <link rel="stylesheet" type="text/css" href="/style/components/code.css" media="screen" />
