--- a/assets/style/typography.css
+++ b/assets/style/typography.css
@@ -59,7 +59,7 @@ a {
   color: black;
 }
 
-@media (max-device-width: 768px) {
+@media (max-device-width: 768px) and (max-width: 768px){
   h1,
   .text-h1 {
     font-size: 2.1rem; /* 34px */
