--- a/assets/style/announcement.css
+++ b/assets/style/announcement.css
@@ -41,7 +41,16 @@
   stroke: #fff;
 }
 
-@media (max-device-width: 768px) and (max-width: 768px) {
+@media (max-device-width: 768px)  {
+  .announcement {
+    padding: 0.625rem;
+    gap: 0.5rem;
+    text-align: center;
+  }
+}
+
+
+@media (width <= 768px)  {
   .announcement {
     padding: 0.625rem;
     gap: 0.5rem;
