--- a/assets/style/get-started.css
+++ b/assets/style/get-started.css
@@ -96,7 +96,7 @@
   align-self: end;
 }
 
-@media (max-device-width: 768px)  {
+@media (max-device-width: 768px), (width <= 768px)  {
   .instructions-install img {
     display: none;
   }
@@ -118,24 +118,3 @@
   }
 }
 
-@media (width <= 768px)  {
-  .instructions-install img {
-    display: none;
-  }
-
-  .instructions-install {
-    padding-bottom: 0;
-  }
-
-  .install-row {
-    flex-direction: column;
-
-    /* stylelint-disable-next-line value-no-vendor-prefix */
-    width: -webkit-fill-available;
-    gap: 1.5rem;
-  }
-
-  .code-install {
-    margin-top: 0;
-  }
-}
