--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -155,119 +155,7 @@ input:focus::placeholder {
   background-color: var(--misc-dark);
 }
 
-@media (max-device-width: 768px)   {
-  .header-size {
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 0.5rem;
-  }
-
-  .header-nav {
-    position: absolute;
-    flex-direction: column;
-    width: 100vw;
-
-    /* This is a magic number. I couldn't figure out a nice way to get the height of the parent element here */
-    top: calc(-100% - 12rem);
-    left: 0;
-    background-color: #fff;
-    transition: 0.3s;
-    gap: 0;
-    z-index: -1;
-  }
-
-  .header-nav.active {
-    top: 100%;
-    z-index: 1;
-  }
-
-  .nav-mobile {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 0.7rem;
-  }
-
-  .nav-mobile h6 {
-    margin: 0;
-  }
-
-  .nav-links {
-    flex-direction: column;
-    gap: 0;
-    margin-top: 0.5rem;
-    border-top: 1px solid var(--neutral-n75);
-    padding-top: 0.5rem;
-    margin-right: 0;
-  }
-
-  .nav-links a {
-    text-decoration: none !important;
-    width: 100vw;
-    border-bottom: 1px solid var(--neutral-n75);
-    padding-left: 1.5rem;
-    padding-bottom: 1rem;
-    box-sizing: border-box;
-  }
-
-  .search-container {
-    height: 2.5rem;
-    display: flex;
-    width: calc(100vw - 3rem);
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 0.75rem;
-    padding-right: 0;
-  }
-
-  .header-button {
-    background-image: var(--gradient-brand);
-    color: var(--primary-p400);
-    display: flex;
-    width: 100%;
-    border-radius: 0%;
-    align-items: center;
-    padding: 1.5rem 0;
-  }
-
-  .get-started {
-    background: none;
-    color: #fff;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 0.5rem;
-  }
-
-  .get-started svg {
-    display: none;
-  }
-
-  .nav-links a,
-  .search-container,
-  .header-button {
-    margin: 0.5rem 0;
-  }
-
-  .hamburger {
-    display: block;
-    cursor: pointer;
-  }
-
-  .hamburger.active .bar:nth-child(2) {
-    opacity: 0;
-  }
-
-  .hamburger.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-
-  .hamburger.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-  }
-}
-
-
-@media (width <= 768px)   {
+@media (max-device-width: 768px), (width <= 768px)   {
   .header-size {
     justify-content: space-between;
     align-items: center;
