--- a/assets/style/typography.css
+++ b/assets/style/typography.css
@@ -59,7 +59,7 @@ a {
   color: black;
 }
 
-@media (max-device-width: 768px) {
+@media (max-device-width: 768px),(width <= 768px){
   h1,
   .text-h1 {
     font-size: 2.1rem; /* 34px */
@@ -96,42 +96,6 @@ a {
   }
 }
 
-@media (width <= 768px) {
-  h1,
-  .text-h1 {
-    font-size: 2.1rem; /* 34px */
-  }
-
-  h2,
-  .text-h2 {
-    font-size: 1.5rem; /* 24px */
-  }
-
-  h3,
-  .text-h3 {
-    font-size: 1.4rem; /* 22px */
-  }
-
-  h4,
-  .text-h4 {
-    font-size: 1.25rem; /* 20px */
-  }
-
-  h5,
-  .text-h5 {
-    font-size: 1.125rem; /* 18px */
-  }
-
-  h6,
-  .text-h6 {
-    font-size: 1.1rem; /* 17px */
-  }
-
-  /* 700px */
-  .text-hero {
-    font-size: 2.5rem; /* 40px */
-  }
-}
 
 p {
   margin: 0 0 1rem;
